--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "reducermanger",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Redux's reducer management and leave page data destruction",
     "main": "lib/index.js",
     "scripts": {
-        "compile": "babel -d lib/ src/"
+        "compile": "babel -d lib/ src/",
+        "jsformat": "prettier --write \"./**/*.js\""
     },
     "repository": {
         "type": "git",
@@ -42,6 +43,7 @@
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1"
+        "babel-preset-stage-0": "^6.24.1",
+        "prettier": "^1.8.2"
     }
 }
