--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "reducermanger",
-    "version": "2.0.0",
+    "name": "reducermanager",
+    "version": "1.0.0",
     "description": "Redux's reducer management and leave page data destruction",
     "main": "lib/index.js",
     "scripts": {
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/yupeifeng/reducermanger.git"
+        "url": "git+https://github.com/yupeifeng/reducermanager.git"
     },
     "keywords": [
         "redux",
@@ -21,9 +21,9 @@
     "author": "yupeifeng",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/yupeifeng/reducermanger/issues"
+        "url": "https://github.com/yupeifeng/reducermanager/issues"
     },
-    "homepage": "https://github.com/yupeifeng/reducermanger#readme",
+    "homepage": "https://github.com/yupeifeng/reducermanager#readme",
     "dependencies": {
         "immutable": "^3.8.2",
         "redux": "^3.7.2",
