--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "reducermanager",
-    "version": "1.1.6",
+    "version": "1.1.9",
     "description": "Redux's reducer management and leave page data destruction",
     "main": "lib/index.js",
     "scripts": {
@@ -26,8 +26,10 @@
     "homepage": "https://github.com/yupeifeng/reducermanager#readme",
     "dependencies": {
         "immutable": "^3.8.2",
+        "react": "^16.1.0",
         "redux": "^3.7.2",
-        "redux-thunk": "^2.2.0"
+        "redux-thunk": "^2.2.0",
+        "react-redux": "^5.0.6"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
