--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-    "name": "reducermanager",
-    "version": "1.2.0",
-    "description": "Redux's reducer management and leave page data destruction",
-    "main": "lib/index.js",
-    "scripts": {
-        "compile": "babel -d lib/ src/",
-        "jsformat": "prettier --write \"./**/*.js\""
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/yupeifeng/reducermanager.git"
-    },
-    "keywords": [
-        "redux",
-        "reducer",
-        "management",
-        "data",
-        "destruction"
-    ],
-    "author": "yupeifeng",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/yupeifeng/reducermanager/issues"
-    },
-    "homepage": "https://github.com/yupeifeng/reducermanager#readme",
-    "dependencies": {
-        "immutable": "^3.8.2",
-        "react": "^16.1.0",
-        "redux": "^3.7.2",
-        "redux-thunk": "^2.2.0",
-        "react-redux": "^5.0.6"
-    },
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-polyfill": "^6.26.0",
-        "babel-cli": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "prettier": "^1.8.2"
-    }
+  "name": "reducermanager",
+  "version": "1.2.1",
+  "description": "Redux's reducer management and leave page data destruction",
+  "main": "lib/index.js",
+  "scripts": {
+    "compile": "babel -d lib/ src/",
+    "jsformat": "prettier --write \"./**/*.js\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yupeifeng/reducermanager.git"
+  },
+  "keywords": [
+    "redux",
+    "reducer",
+    "management",
+    "data",
+    "destruction"
+  ],
+  "author": "yupeifeng",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yupeifeng/reducermanager/issues"
+  },
+  "homepage": "https://github.com/yupeifeng/reducermanager#readme",
+  "dependencies": {
+    "immutable": "^3.8.2",
+    "react": "^16.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "react-redux": "^5.0.6",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "prettier": "^1.8.2"
+  }
 }
