--- a/srctools/package.json
+++ b/srctools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "static_html_js",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -14,11 +14,16 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-rangeslider": "^2.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reducermanager": "^1.2.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "redux-devtools": "^3.4.1",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2"
   },
   "devDependencies": {
     "mockjs": "*",
@@ -44,6 +49,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "fetch-jsonp": "^1.1.1",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "prettier": "^1.8.2"
   }
 }
