--- a/srctools/package.json
+++ b/srctools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static_html_js",
+  "name": "srctools",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -49,7 +49,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "fetch-jsonp": "^1.1.1",
-    "whatwg-fetch": "^2.0.3",
-    "prettier": "^1.8.2"
+    "whatwg-fetch": "^2.0.3"
   }
 }
