解决不能使用immutable.fromJS问题

--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,14 @@
     "antd": "^2.13.10",
     "babel-plugin-import": "^1.2.1",
     "echarts": "^3.8.5",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.9",
     "moment": "^2.19.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-rangeslider": "^2.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reducermanager": "^1.2.7",
+    "reducermanager": "^1.2.9",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
