--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reducermanager",
-  "version": "1.2.7",
+  "version": "1.2.9",
   "description": "Redux's reducer management and leave page data destruction",
   "main": "lib/index.js",
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/yupeifeng/reducermanager#readme",
   "dependencies": {
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.9",
     "react": "^16.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
