--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reducermanager",
-  "version": "1.2.9",
+  "version": "1.3.2",
   "description": "Redux's reducer management and leave page data destruction",
   "main": "lib/index.js",
   "scripts": {
@@ -32,7 +32,8 @@
     "react-redux": "^5.0.6",
     "redux-devtools": "^3.4.1",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2"
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "deepcopy": "^0.6.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
