--- a/example/package.json
+++ b/example/package.json
@@ -37,6 +37,9 @@
     "css-loader": "0.28.1",
     "ejs": "^2.5.7",
     "extract-text-webpack-plugin": "^2.1.2",
+    "clean-webpack-plugin": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "fetch-jsonp": "^1.1.1",
     "mockjs": "*",
     "node-sass": "^4.9.3",
